# py-fusion

./: .gitignore  MANIFEST.in  README.md  check_dependencies.py  create_icons.py  environment.yml  example.py  index.py  pyproject.toml  requirements.txt  run_py_fusion_gui.py  setup.py
.github/workflows/: build-all.yml  build-linux.yml  build-macos.yml  build-windows.yml
py_fusion_gui/: __init__.py  main.py
py_fusion_gui/controllers/: __init__.py  main_controller.py
py_fusion_gui/models/: __init__.py  analysis_model.py  merge_model.py  settings_model.py
py_fusion_gui/resources/icons/: py_fusion.icns
py_fusion_gui/resources/styles/: dark_theme.qss  light_theme.qss
py_fusion_gui/utils/: __init__.py  backup_manager.py  platform_utils.py  temp_folder_manager.py
py_fusion_gui/views/: __init__.py  backup_dialog.py  cached_folders_dialog.py  main_window.py
