[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-fusion"
version = "1.0.0"
description = "A tool for merging multiple folders intelligently"
readme = "README.md"
authors = [
    {name = "Mathéo", email = "mateo@auraxgroup.com"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyQt6>=6.5.0",
    "PyQt6-Qt6>=6.5.0",
    "PyQt6-sip>=13.5.0",
    "qtawesome>=1.2.3",
]

[project.optional-dependencies]
macos = [
    "pyobjc-core>=9.0.1",
    "pyobjc-framework-Cocoa>=9.0.1",
]

[project.urls]
"Homepage" = "https://github.com/mateoltd/py-fusion"
"Bug Tracker" = "https://github.com/mateoltd/py-fusion/issues"

[project.scripts]
py-fusion = "index:main"

[project.gui-scripts]
py-fusion-gui = "py_fusion_gui.main:main"
